--- a/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
@@ -1068,7 +1068,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
 
     //rewardsCampaignString
     <string name="reward_campaign_add_proof">ADD PROOF</string>
-    <string name="select_payment_method">SELECT YOUR \n PREFERRED METHOD OF PAYMENT</string>
+    <string name="select_payment_method">PREFERRED METHOD OF PAYMENT</string>
 
 
     //campaigndetails
@@ -1167,7 +1167,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="social_page_add_website_hint">www.momvlogger.com/sheetal</string>
     <string name="social_page_add_website">ADD WEBSITE</string>
 
-
+    <string name="rewards_pancard_details">Pan details</string>
     <string name="drawer_referra_mymoney">Refer MyMoney</string>
     <string name="referral_screen_text">Invite a friend to join MyMoney by sharing your referral code. Both of you will earn Rs. 25 once she has successfully completed a MyMoney campaign.</string>
     <string name="share_referral_screen">Share your referral code and start earning</string>
@@ -1262,4 +1262,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="campaign_list_sorry_not_eligible">Give MyMoney a try!</string>
     <string name="try_following_campaign">Try the following campaign instead!</string>
     <string name="campaign_list_try_following_campaign">Participate in your first campaign now!</string>
+    <string name="badges">Badges</string>
+    <string name="profile_setting">Profile settings</string>
+    <string name="accounts">Accounts</string>
 </resources>
