--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -1023,7 +1023,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="rewards_tab_fragment_paymentMode">PAYMENT MODE</string>
     <string name="rewards_tab_fragment_panCard">PAN CARD DETAILS</string>
 
-
+    <string name="rewards_pancard_details">Pan details</string>
     <string name="rewards_tab_fragment_myEarning">MY EARNING</string>
     <string name="rewards_tab_fragment_referrer_myMoney">refer mymoney</string>
     <string name="rewards_pancard_toolbar_text">PAN CARD DETAIL</string>
@@ -1064,7 +1064,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="tracker_Activity_expected_date">Expected Date</string>
     <string name="tracker_activity_proof_submitted_rejected">PROOFS SUBMITTED REJECTED</string>
     <string name="reward_campaign_add_proof">ADD PROOF</string>
-    <string name="select_payment_method">SELECT YOUR \n PREFERRED METHOD OF PAYMENT</string>
+    <string name="select_payment_method">PREFERRED METHOD OF PAYMENT</string>
 
 
     //campaignListing
@@ -1199,4 +1199,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="campaign_list_sorry_not_eligible">Give MyMoney a try!</string>
     <string name="try_following_campaign">Try the following campaign instead!</string>
     <string name="campaign_list_try_following_campaign">Participate in your first campaign now!</string>
+    <string name="badges">Badges</string>
+    <string name="profile_setting">Profile settings</string>
+    <string name="accounts">Accounts</string>
 </resources>
