--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -1206,4 +1206,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="profile_my_collections">My Collections</string>
     <string name="profile_view_all_collections">View All</string>
     <string name="profile_add_new">Add New</string>
+    <string name="profile_featured_more">+%d More</string>
 </resources>
