profile creation CTAs

--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -1207,4 +1207,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="profile_view_all_collections">View All</string>
     <string name="profile_add_new">Add New</string>
     <string name="profile_featured_more">+%d More</string>
+    <string name="all_drafts">Drafts</string>
+    <string name="all_story">100 Word Story</string>
+    <string name="all_blogs">Blogs</string>
+    <string name="all_videos">Videos</string>
 </resources>
