--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -1233,4 +1233,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="empty_followers_in_profile">The people who follow your profile will show here</string>
     <string name="empty_followers_in_collection">The people who follow your collection will show here</string>
     <string name="no_collection_item_text">The articles you add to this collection will show here</string>
+    <string name="badges_winner_share_text">%1$s %2$s is a %3$s badge winner | Momspresso\n%4$s</string>
 </resources>
