--- a/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
@@ -1257,19 +1257,19 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="all_blogs">Blogs</string>
     <string name="all_videos">Videos</string>
     <string name="profile_post_featured">Post featured on the following collections</string>
-    <string name="dialog_fragment_add_collection_select_collection">Select Collection</string>
+    <string name="dialog_fragment_add_collection_select_collection">ശേഖരം തിരഞ്ഞെടുക്കുക</string>
     <string name="no_collections_yet">no collections yet</string>
-    <string name="collection_created_tab">CREATED</string>
-    <string name="collection_followed_tab">FOLLOWED</string>
+    <string name="collection_created_tab">സൃഷ്ടിച്ചു</string>
+    <string name="collection_followed_tab">പിന്തുടർന്നു</string>
     <string name="visible_to_all">visible to all</string>
-    <string name="please_add_collection_name">Please add collection Name</string>
-    <string name="thumbnail">Thumbnail</string>
-    <string name="collection_change_image_in_edit_collection">change</string>
+    <string name="please_add_collection_name">ശേഖരണ നാമം ചേർക്കുക</string>
+    <string name="thumbnail">ലഘുചിത്രം</string>
+    <string name="collection_change_image_in_edit_collection">തിരുത്തുക</string>
     <string name="no_collection_items">no items</string>
-    <string name="list_of_content">List of Content</string>
-    <string name="edit_collection">Edit Collection</string>
-    <string name="delete_collection">Delete Collection</string>
-    <string name="are_you_sure_you_want_to_delete_the_collection">Are you sure you want to delete the collection</string>
+    <string name="list_of_content">ഉള്ളടക്കം</string>
+    <string name="edit_collection">ശേഖരം എഡിറ്റുചെയ്യുക</string>
+    <string name="delete_collection">ശേഖരം നീക്കം ചെയ്യുക</string>
+    <string name="are_you_sure_you_want_to_delete_the_collection">ശേഖരം ഇല്ലാതാക്കാൻ നിങ്ങൾ ആഗ്രഹിക്കുന്നുണ്ടോ?</string>
     <string name="add_collection_name">Add collection name</string>
     <string name="profile_share_the_joy">Share the Joy</string>
     <string name="dialog_confirm_delete">Are you sure you want to delete this collection</string>
@@ -1281,4 +1281,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="no_collection_item_text">The articles you add to this collection will show here</string>
     <string name="badges_winner_share_text">%1$s %2$s is a %3$s badge winner | Momspresso\n%4$s</string>
     <string name="crown_winner_share_text">%1$s %2$s is a %3$s crown winner | Momspresso\n%4$s</string>
+    <string name="add_thumbnail">ലഘുചിത്രം ചേർക്കുക</string>
 </resources>
