--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -346,8 +346,8 @@
     <string name="subscribe_topics.save">सेव करा </string>
     <string name="subscribe_topics.toast_topic_updated">फॉलो केलेल्या विषयांची सूची यशस्वीपणे सेव  झाली आहे </string>
 
-    <string name="myprofile.following_label">फॉलोविंग </string>
-    <string name="myprofile.followers_label">फॉलोवर्स </string>
+    <string name="myprofile.following_label">फॉलोविंग</string>
+    <string name="myprofile.followers_label">फॉलोवर्स</string>
     <string name="myprofile.section.articles_label">लेख</string>
     <string name="myprofile.section.short_story_label">100 शब्दांची गोष्ट</string>
     <string name="myprofile.section.videos_label">मॉम वलॉग्स</string>
@@ -1210,19 +1210,19 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="all_blogs">Blogs</string>
     <string name="all_videos">Videos</string>
     <string name="profile_post_featured">Post featured on the following collections</string>
-    <string name="dialog_fragment_add_collection_select_collection">Select Collection</string>
+    <string name="dialog_fragment_add_collection_select_collection">संग्रह निवडा</string>
     <string name="no_collections_yet">no collections yet</string>
-    <string name="collection_created_tab">CREATED</string>
-    <string name="collection_followed_tab">FOLLOWED</string>
+    <string name="collection_created_tab">तयार केले</string>
+    <string name="collection_followed_tab">अनुसरण केले</string>
     <string name="visible_to_all">visible to all</string>
-    <string name="please_add_collection_name">Please add collection Name</string>
-    <string name="thumbnail">Thumbnail</string>
-    <string name="collection_change_image_in_edit_collection">change</string>
+    <string name="please_add_collection_name">कृपया नवीन संग्रह जोडा</string>
+    <string name="thumbnail">लघुप्रतिमा</string>
+    <string name="collection_change_image_in_edit_collection">बदला</string>
     <string name="no_collection_items">no items</string>
-    <string name="list_of_content">List of Content</string>
-    <string name="edit_collection">Edit Collection</string>
-    <string name="delete_collection">Delete Collection</string>
-    <string name="are_you_sure_you_want_to_delete_the_collection">Are you sure you want to delete the collection</string>
+    <string name="list_of_content">लेखांची यादी</string>
+    <string name="edit_collection">संग्रह संपादित करा</string>
+    <string name="delete_collection">संग्रह हटवा</string>
+    <string name="are_you_sure_you_want_to_delete_the_collection">तुमची खात्री आहे का ? तुम्ही तुमचा संग्रह हटवू इच्छिता?</string>
     <string name="add_collection_name">Add collection name</string>
     <string name="profile_share_the_joy">Share the Joy</string>
     <string name="dialog_confirm_delete">Are you sure you want to delete this collection</string>
@@ -1234,4 +1234,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="no_collection_item_text">The articles you add to this collection will show here</string>
     <string name="badges_winner_share_text">%1$s %2$s is a %3$s badge winner | Momspresso\n%4$s</string>
     <string name="crown_winner_share_text">%1$s %2$s is a %3$s crown winner | Momspresso\n%4$s</string>
+    <string name="add_thumbnail">लघुप्रतिमा जोडा</string>
 </resources>
