--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -1229,4 +1229,9 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="all_view">View</string>
     <string name="all_analytics">Analytics</string>
     <string name="read_articles">READ ARTICLES</string>
+    <string name="profile_emailid">Email Id</string>
+    <string name="profile_blog_title">Blog Title</string>
+    <string name="child_delete">Delete</string>
+    <string name="profile_name_optional">Name (optional)</string>
+    <string name="profile_expected_date_delivery">Expected date of delivery</string>
 </resources>
