--- a/MyCity4Kids/MyCity4Kids/res/values-gu/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-gu/strings.xml
@@ -1089,7 +1089,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     //campaigndetaildialog
     <string name="apply_code_error">Code already used. Please enter a different one</string>
     <string name="dialog_congratulations">Congratulations!</string>
-    <string name="dialog_you_can_earn">You can earn</string>
+    <string name="dialog_you_can_earn">You can earn upto Rs.</string>
     <string name="invite_only_header">This campaign is by invite only.</string>
     <string name="invite_only_interested">I\'M INTERESTED</string>
     <string name="dialog_invite_only_subtext">Click below to apply for future ‘invite only’ campaigns.</string>
@@ -1369,4 +1369,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="login_enter_otp">Please enter OTP below</string>
     <string name="login_resend_otp">Resend OTP</string>
     <string name="login_remaining_time">Seconds remaining: %1$d</string>
+    <string name="add_to_collection">Add to Collection</string>
 </resources>
