--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -1105,7 +1105,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="refer_code">REFERRAL CODE</string>
     <string name="apply_code_error">Code already used. Please enter a different one</string>
     <string name="dialog_congratulations">बधाई हो!</string>
-    <string name="dialog_you_can_earn">आप कमा सकते हैं</string>
+    <string name="dialog_you_can_earn">आप कमा सकते हैं Rs.</string>
     <string name="invite_only_header">This campaign is by invite only.</string>
     <string name="invite_only_interested">I\'M INTERESTED</string>
     <string name="dialog_invite_only_subtext">Click below to apply for future ‘invite only’ campaigns.</string>
@@ -1278,4 +1278,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="login_enter_otp">Please enter OTP below</string>
     <string name="login_resend_otp">Resend OTP</string>
     <string name="login_remaining_time">Seconds remaining: %1$d</string>
+    <string name="add_to_collection">Add to Collection</string>
 </resources>
