--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -1255,4 +1255,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="login_resend_otp">Resend OTP</string>
     <string name="login_remaining_time">Seconds remaining: %1$d</string>
     <string name="add_to_collection">Add to Collection</string>
+    <string name="profile_follow_author">Follow %1$s on Momspresso!</string>
+    <string name="analytics_lang_rank">உங்கள் ரேங்க் \nஉள்ளே %1$s</string>
 </resources>
