localization + gradle donwgrade

--- a/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
@@ -1208,9 +1208,9 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="badges">Badges</string>
     <string name="profile_setting">Profile settings</string>
     <string name="accounts">Accounts</string>
-    <string name="profile_my_collections">My Collections</string>
-    <string name="profile_view_all_collections">View All</string>
-    <string name="profile_add_new">Add New</string>
+    <string name="profile_my_collections">আমার সংগ্রহ </string>
+    <string name="profile_view_all_collections">পুরোটা দেখুন </string>
+    <string name="profile_add_new">নতুন যোগ করুন </string>
     <string name="profile_featured_more">+%d More</string>
     <string name="all_drafts">Drafts</string>
     <string name="all_story">100 Word Story</string>
@@ -1224,7 +1224,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="visible_to_all">visible to all</string>
     <string name="please_add_collection_name">অনুগ্রহ করে সংগ্রহটির একটি নাম দিন</string>
     <string name="thumbnail">থাম্বনেইল</string>
-    <string name="collection_change_image_in_edit_collection">বদান</string>
+    <string name="collection_change_image_in_edit_collection">বদলান</string>
     <string name="no_collection_items">no items</string>
     <string name="list_of_content">বিষয়সমূহের তালিকা</string>
     <string name="edit_collection">সংগ্রহটিকে এডিট করুন</string>
@@ -1267,4 +1267,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="analytics_lang_rank">আপনার স্থান \nIN %1$s</string>
     <string name="analytics_milestones">MILESTONES</string>
     <string name="badges_list_share_text">Checkout %1$s\'s achievements on Momspresso! \n%2$s</string>
+    <string name="milestones_share_text">%1$s\'s %2$s \'%3$s\' got %4$s! | Momspresso \n%5$s</string>
 </resources>
